# nrf9151-tracker

./: .gitignore  CLAUDE.md  Makefile  README.md  env.template  setup.sh  smoke.sh  west.yml
apps/atprobe/: CMakeLists.txt  prj.conf
apps/atprobe/boards/: nrf9151dk_nrf9151_ns.overlay
apps/atprobe/src/: main.c
apps/gnss/: CMakeLists.txt  prj.conf
apps/gnss/boards/: nrf9151dk_nrf9151_ns.overlay
apps/gnss/src/: main.c
apps/hello/: CMakeLists.txt
apps/hello/boards/: nrf9151dk_nrf9151_ns.conf  nrf9151dk_nrf9151_ns.overlay
apps/hello/src/: main.c
apps/imuprobe/: CMakeLists.txt  prj.conf
apps/imuprobe/boards/: nrf9151dk_nrf9151_ns.overlay
apps/imuprobe/src/: main.c
apps/tracker/: CMakeLists.txt  Kconfig  prj.conf
apps/tracker/boards/: native_sim_native_64.conf  native_sim_native_64.overlay  nrf9151dk_nrf9151_ns.conf  nrf9151dk_nrf9151_ns.overlay
apps/tracker/src/: main.c
apps/tracker/src/flog/: flog.c  flog.h
apps/tracker/src/lib/nrf_modem_mock/: lte_lc_mock.c  nrf_modem_mock.c
apps/tracker/src/loc/: agnss.c  agnss.h  imu.c  imu.h  loc_fsm.c  loc_fsm.h  motion.c  motion.h
apps/tracker/src/modem/: cell_info.c  cell_info.h  gnss_ctrl.c  gnss_ctrl.h  lte_ctrl.c  lte_ctrl.h
apps/tracker/src/net/: coap_pub.c  coap_pub.h  event_queue.c  event_queue.h  log_uplink.c  log_uplink.h  obs_queue.c  obs_queue.h  uplink.c  uplink.h
apps/tracker/src/proto/: tracker.pb.c  tracker.pb.h  tracker_encode.c  tracker_encode.h  tracker_encode_types.h
apps/tracker/src/sys/: guard.c  guard.h
apps/tracker/src/ui/: leds.c  leds.h
docs/: loc-fsm-decision-table.md
docs/superpowers/specs/: 2026-07-11-adaptive-cadence-design.md  2026-07-12-observability-phase1-design.md
mk/: fw.mk  server.mk
proto/: tracker.cddl  tracker.options  tracker.proto
scripts/: anomaly-report.py  flogtest.sh  seed-testday.py  setup-system.sh  setup-tools.sh  vm-deploy.sh  web-check.py  webtest.sh
scripts/windows/: passthrough.ps1  uart.ps1
server/: agnss.py  agnss_cache.json  alerts.py  app.py  broker.py  build_cells.py  coap_server.py  ingest.py  requirements-dev.txt  requirements.txt  tracker_pb2.py
server/static/: index.html
server/static/css/: main.css
server/static/js/: api.js  app.js  cadence.js  cells.js  charts.js  devices.js  drawer.js  events.js  fixtable.js  format.js  history.js  journeys.js  live.js  logs.js  map.js  mapview.js  settings.js  trips.js  usage-model.js  usage.js
server/tests/: brdc_fixture.rnx  test_agnss.py  test_alerts.py  test_current.py
tests/flog/: tiny-ring.overlay
tests/fsm/: CMakeLists.txt  prj.conf  testcase.yaml
tests/fsm/src/: main.c  motion_test.c
